--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,10 +21,11 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    /* color-scheme: dark; */
   }
   body {
-    color: white;
-    background: black;
+    /* color: white;
+    background: black; */
+    background-color: #f1f5f9;
   }
 }
